fixed search page layout issues for intermediate sizes + updated route-list duration formatting to date-fns v2

--- a/src/main/web/src/app/shared/search/results-container.component.scss
+++ b/src/main/web/src/app/shared/search/results-container.component.scss
@@ -1,5 +1,7 @@
 @import "theme";
 
+$breakpoint-1: 700px;
+
 :host {
 	display: flex;
 	justify-content: center;
@@ -167,6 +169,10 @@ h3.results-title {
 		}
 	}
 
+	.results-subtitle {
+		display: none;
+	}
+
 	.results-subtitle::after {
 		content: "|";
 		margin-left: 8px;
@@ -190,5 +196,22 @@ h3.results-title {
 	}
 	.desktop {
 		display: block;
+	}
+}
+
+
+.desktop-lg {
+	display: none;
+}
+
+@media all and (min-width: 800px) {
+	.desktop-lg {
+		display: block;
+	}
+}
+
+@media all and (min-width: 1000px){
+	.results-subtitle {
+		display: initial;
 	}
 }
